--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 .MainBody {
-    /* background-color: rgba(255, 255, 255, 0.89); */
-    background-color: rgb(243, 241, 241);
-    width: 100%;
-    height: 100vh;
-    min-height: 100%;
-  }
+  /* background-color: rgba(255, 255, 255, 0.89); */
+  background-color: rgb(243, 241, 241);
+  width: 100%;
+  height: 100vh;
+  min-height: 100%;
+}
+
+* {
+  font-family: 'Lato', sans-serif;
+}
